# bevy-prototyping

./: Cargo.toml  README.md
src/: asset_loader.rs  camera.rs  debug.rs  enemy.rs  item_manager.rs  level_manager.rs  main.rs  movement.rs  player.rs  schedule.rs  state.rs  ui.rs  util.rs
src/examples/: timer.rs
src/ui/: station_menu.rs
